# snakeAI

./: .gitignore  main.py  pyproject.toml  train.py  utils.py
agent/: __init__.py  dqn.py  memory.py
checkpoints/: dqn_snake_checkpoint_ep266250.pth  dqn_snake_checkpoint_ep266500.pth  dqn_snake_checkpoint_ep266750.pth  dqn_snake_checkpoint_ep60500.pth  dqn_snake_checkpoint_ep60750.pth  dqn_snake_checkpoint_ep61000.pth
config/: __init__.py  constants.py  settings.py
core/: __init__.py  ai_manager.py  game_controller.py  menu_system.py
plots/: summary_table.md
snake_game/: __init__.py  game.py  utils.py  vector_env.py
utils/: __init__.py  device_utils.py  file_utils.py
